# DNArchery

./: .gitignore  CODE-OF-CONDUCT.md  CONTRIBUTING.md  Cargo.toml  DNArchery.postman_collection.json  LICENSE  README.md  package-lock.json  package.json
assets/: DNArchery.postman_collection.json
lib/libplasmid/.svn/: wc.db
lib/libplasmid/src/: dna.rs  err.rs  lib.rs  prelude.rs  rna.rs  seq.rs
lib/libplasmid/src/dna/: dna_codon.rs
lib/libplasmid/src/eaa/: qualified_eaa.rs
lib/libplasmid/src/exp/: export.rs
lib/libplasmid/src/imp/: import.rs
lib/libplasmid/src/rna/: rna_codon.rs
lib/libplasmid/src/seq/: dna.rs  rna.rs
lib/libplasmid/src/traits/: from_letter.rs  nucleotide.rs  to_letter.rs
lib/libplasmid/src/uni/: iupac_nucleotide.rs  restriction_enzymes.rs
lib/rust-genomics/: Cargo.toml  README.md
lib/rust-genomics/benches/: my_benchmark.rs
lib/rust-genomics/data/: haha-1.fasta  sars_cov2_snip.fasta  sars_cov_2.fa
lib/rust-genomics/src/: lib.rs  main.rs
samples/: HUMAN-DNA.txt  SRR0000001.fastq  dna_seq_altered.txt  dna_seq_original.txt  sample.fasta
src/: main.rs
src/api/: mod.rs  server.rs
src/api/endpoints/: dna.rs  fasta.rs  mod.rs  sequence.rs
src/core/: mod.rs  schema.rs
src/core/dna/: algos.rs  mod.rs  utils.rs
src/core/fasta/: utils.rs
src/core/sequence/: utils.rs
src/plug/: gui.rs  mod.rs
ui/: README.md  package-lock.json  package.json
ui/src/: App.css  App.js
ui/src/components/AminoAcid/: AminoAcid.js
ui/src/components/Codon/: Codon.js
ui/src/components/FilePicker/: FilePicker.js  styles.css
ui/src/components/Input/: Input.js  MultipleInput.js  defaults.js  styles.css
ui/src/components/Lorf/: Lorf.js
ui/src/components/PlaceHolder/: PlaceHolder.js
ui/src/components/Protein/: Protein.js
ui/src/endpoints/: Functions.js
ui/src/fonts/: Poppins-MediumItalic.ttf:Zone.Identifier
ui/src/screens/: Algorithms.css  Algorithms.js  DNA.css  DNA.js  Sequence.js
