[package]
name = "rust-genomics"
version = "0.1.0"
authors = ["joyliu-q <joyliu.q@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7.3"
rayon = "1.1"
strsim = "0.10.0"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "my_benchmark"
harness = false